# cockroach-rollout-agent

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.github/: CODEOWNERS  actionlint.yaml  copilot-instructions.md  dependabot.yml  repository-config.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml  release-assets.yml  release.yml  security.yml  todo-collect.yml
changelog.d/: 20260720-quinn-proto-rustsec.md
docs/: deploy.md  index.html  security.md
examples/: cockroach-rollout-agent.env.example  cockroach-rollout-agent.service  cockroach-rollout-agent.sudoers
scripts/: assemble_todo.py  install.sh
src/: main.rs
todo.d/: README.md  todo.ini
