[package]
name = "cockroach-rollout-agent"
version = "0.1.0"
edition = "2024"
authors = ["jdfalk <jdfalk@users.noreply.github.com>"]
license = "MIT"
description = "Public-safe CockroachDB binary rollout helper and daemon scaffold"
homepage = "https://github.com/jdfalk/cockroach-rollout-agent"
repository = "https://github.com/jdfalk/cockroach-rollout-agent"
readme = "README.md"
keywords = ["cockroachdb", "rollout", "upgrade", "systemd"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[[bin]]
name = "cockroach-rollout-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
hostname = "0.4"
postgres = "0.19"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
